--- a/CustomeNotifications/CustomeNotifications.entitlements
+++ b/CustomeNotifications/CustomeNotifications.entitlements
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array/>
+	<array>
+		<string>group.volive.CustomeNotifications</string>
+	</array>
 </dict>
 </plist>
